# docker-base-image-swapper

./: .gitignore  Cargo.toml  README.md  lombok.config  pom.xml
demo/: Dockerfile  demo.sh
src/main/java/me/concision/warcrimes/docker/swapper/: CommandArguments.java  DockerBaseImageSwapper.java  DockerBaseImageSwapperCmd.java
src/main/java/me/concision/warcrimes/docker/swapper/api/: DockerContainerConfig.java  DockerImage.java  DockerImageArchive.java  DockerImageConfig.java  DockerLayer.java  DockerLayerManifest.java
src/main/java/me/concision/warcrimes/docker/swapper/archive/: DockerImage.java  DockerImageIO.java
src/main/java/me/concision/warcrimes/docker/swapper/transformer/: ImageState.java  ImageTransformer.java
src/main/java/me/concision/warcrimes/docker/swapper/transformers/: T01ValidateCompatibility.java  T02CreateArchive.java  T03ImageLayers.java  T04RelinkLastLayerConfig.java  T05RelinkLayerIds.java  T06ReconcileConfiguration.java  T07LinkOutputTag.java  T08NewConfigName.java
src/main/java/me/concision/warcrimes/docker/swapper/util/: CountingInputStream.java  RandomAccessTarArchiveFile.java  Sha256Hash.java
src/main/java/me/concision/warcrimes/docker/swapper/util/io/: CountingInputStream.java  RandomAccessTarArchiveFile.java
src/main/resources/: log4j2.xml
